# aws-iot-device-embedded-c-sdk-for-zephyr

./: .gitmodules  LICENSE  README.md
.github/workflows/: buildcheck.yml  github-actions-demo.yml
demos/http/common/: httpCommonFilePaths.cmake
demos/http/common/include/: http_demo_utils.h
demos/http/common/src/: http_demo_utils.c
demos/http/http_mutual_auth/: CMakeLists.txt  core_http_config.h  prj.conf
demos/http/http_mutual_auth/src/: demo_config.h  main.c
demos/http/http_plaintext/: CMakeLists.txt  core_http_config.h  prj.conf
demos/http/http_plaintext/src/: demo_config.h  main.c
demos/mqtt/mqtt_basic_tls/: CMakeLists.txt  core_mqtt_config.h  prj.conf
demos/mqtt/mqtt_basic_tls/src/: demo_config.h  main.c
demos/mqtt/mqtt_mutual_auth/: CMakeLists.txt  aws_iot_policy_example_mqtt.json  prj.conf
demos/mqtt/mqtt_mutual_auth/src/: clock_posix.c  demo_config.h  main.c
demos/mqtt/mqtt_plaintext/: CMakeLists.txt  core_mqtt_config.h
demos/mqtt/mqtt_plaintext/src/: demo_config.h  main.c
demos/mqtt_agent/mqtt_agent_demo/: CMakeLists.txt  core_mqtt_config.h  mqtt_agent_config.h  prj.conf
demos/mqtt_agent/mqtt_agent_demo/src/: demo_config.h  main.c  simple_pub_sub_demo.c
demos/shadow/shadow_main/: CMakeLists.txt  aws_iot_policy_example_shadow.json  core_mqtt_config.h  shadow_config.h
demos/shadow/shadow_main/src/: demo_config.h  main.c  shadow_demo_helpers.c  shadow_demo_helpers.h
platform/espressif/: espressifFilePaths.cmake
platform/espressif/wifi/include/: wifi_espressif.h
platform/espressif/wifi/src/: esp_wifi_wrapper.c  wifi_espressif.c
platform/zephyr/: zephyrFilePaths.cmake
platform/zephyr/clock/: clockFilePaths.cmake
platform/zephyr/clock/include/: clock.h
platform/zephyr/clock/source/: clock.c
platform/zephyr/mqtt_agent/include/: agent_interface_zephyr.h  subscription_manager.h
platform/zephyr/mqtt_agent/src/: agent_interface_zephyr.c  subscription_manager.c
platform/zephyr/transport/include/: mbedtls_zephyr.h  plaintext_zephyr.h  sockets_zephyr.h
platform/zephyr/transport/src/: mbedtls_zephyr.c  plaintext_zephyr.c  sockets_zephyr.c
platform/zephyr/utilities/: utilitiesFilePaths.cmake
